[project]
name = "python-hometask"
version = "0.1.0"
description = "my project"
authors = [
    {name = "Artem",email = "artem.chebanyuk@gmail.com@email.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
